--- a/Prover.Client/Themes/Button.xaml
+++ b/Prover.Client/Themes/Button.xaml
@@ -1,5 +1,3 @@
-﻿<ResourceDictionary
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-	<!-- Resource dictionary entries should be defined here. -->
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <!--  Resource dictionary entries should be defined here.  -->
 </ResourceDictionary>
