--- a/Prover.Client/Themes/SimpleStyles.xaml
+++ b/Prover.Client/Themes/SimpleStyles.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:d="http://schemas.microsoft.com/expression/interactivedesigner/2006"
+                    xmlns:System="clr-namespace:System;assembly=mscorlib"
+                    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                     mc:Ignorable="d">
 
@@ -10,6 +11,10 @@
         Brushes : These are used to define the color for background, foreground, selection, enabled etc of all controls
         If you want to change the color of a control you can just chnage the brush; if you want to add a new shape or change arrangement then also edit the template
     -->
+
+
+    <!--  Style and Template pairs are used to define each control Part  -->
+    <!--  The Style provides default values on the control; the Template gives the elements for each control  -->
 
     <!--  NormalBrush is used as the Background for SimpleButton, SimpleRepeatButton  -->
     <LinearGradientBrush x:Key="NormalBrush" StartPoint="0,0" EndPoint="0,1">
@@ -70,9 +75,6 @@
     <SolidColorBrush x:Key="GlyphBrush" Color="#444" />
 
 
-    <!--  Style and Template pairs are used to define each control Part  -->
-    <!--  The Style provides default values on the control; the Template gives the elements for each control  -->
-
     <!--  SimpleButtonFocusVisual is used to show keyboard focus around a SimpleButton control  -->
     <Style x:Key="SimpleButtonFocusVisual">
         <Setter Property="Control.Template">
@@ -94,25 +96,35 @@
            BasedOn="{x:Null}"
            TargetType="{x:Type Button}">
         <Setter Property="FocusVisualStyle" Value="{DynamicResource SimpleButtonFocusVisual}" />
-        <Setter Property="Background" Value="{DynamicResource NormalBrush}" />
-        <Setter Property="BorderBrush" Value="{DynamicResource NormalBorderBrush}" />
+        <Setter Property="Background" Value="{DynamicResource GlyphBrush}" />
+        <Setter Property="BorderBrush">
+            <Setter.Value>
+                <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.AppWorkspaceColorKey}}" />
+            </Setter.Value>
+        </Setter>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
 
                     <!--  We use Grid as a root because it is easy to add more elements to customize the button  -->
-                    <Grid x:Name="Grid">
+                    <Grid x:Name="Grid"
+                          Width="100"
+                          Height="50">
+
+                        <!--  Content Presenter is where the text content etc is placed by the control  -->
+                        <!--  The bindings are useful so that the control can be parameterized without editing the template  -->
                         <Border x:Name="Border"
+                                Width="100"
+                                Height="50"
                                 Background="{TemplateBinding Background}"
                                 BorderBrush="{TemplateBinding BorderBrush}"
                                 BorderThickness="{TemplateBinding BorderThickness}"
                                 Padding="{TemplateBinding Padding}" />
 
-                        <!--  Content Presenter is where the text content etc is placed by the control  -->
-                        <!--  The bindings are useful so that the control can be parameterized without editing the template  -->
-                        <ContentPresenter Margin="{TemplateBinding Padding}"
+                        <ContentPresenter Width="Auto"
                                           HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                           VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                          ContentTemplate="{TemplateBinding ContentTemplate}"
                                           RecognizesAccessKey="True" />
                     </Grid>
 
@@ -138,6 +150,7 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+        <Setter Property="Foreground" Value="White" />
     </Style>
 
     <Style x:Key="RadioButtonFocusVisual">
@@ -498,7 +511,7 @@
                                    Style="{DynamicResource SimpleScrollBar}"
                                    ViewportSize="{TemplateBinding ViewportWidth}"
                                    Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}"
-                                   Value="{Binding Path=HorizontalOffset,
+                                   Value="{Binding HorizontalOffset,
                                                    Mode=OneWay,
                                                    RelativeSource={RelativeSource TemplatedParent}}" />
                         <ScrollBar x:Name="PART_VerticalScrollBar"
@@ -510,7 +523,7 @@
                                    Style="{DynamicResource SimpleScrollBar}"
                                    ViewportSize="{TemplateBinding ViewportHeight}"
                                    Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}"
-                                   Value="{Binding Path=VerticalOffset,
+                                   Value="{Binding VerticalOffset,
                                                    Mode=OneWay,
                                                    RelativeSource={RelativeSource TemplatedParent}}" />
                     </Grid>
@@ -658,7 +671,7 @@
                                     <ColumnDefinition Width="*" />
                                 </Grid.ColumnDefinitions>
                                 <ToggleButton Background="{DynamicResource NormalBrush}"
-                                              IsChecked="{Binding Path=IsExpanded,
+                                              IsChecked="{Binding IsExpanded,
                                                                   Mode=TwoWay,
                                                                   RelativeSource={RelativeSource TemplatedParent}}"
                                               OverridesDefaultStyle="True"
@@ -773,7 +786,7 @@
                                       Grid.Column="2"
                                       ClickMode="Press"
                                       Focusable="false"
-                                      IsChecked="{Binding Path=IsDropDownOpen,
+                                      IsChecked="{Binding IsDropDownOpen,
                                                           Mode=TwoWay,
                                                           RelativeSource={RelativeSource TemplatedParent}}"
                                       Template="{DynamicResource ComboBoxToggleButton}" />
@@ -1008,8 +1021,8 @@
 
     <!--  Simple MenuItem - The template uses triggers to provide four different arrangements of menu item which are set via the Role property  -->
     <Style x:Key="SimpleMenuItem" TargetType="{x:Type MenuItem}">
-        <Setter Property="HorizontalContentAlignment" Value="{Binding Path=HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" />
-        <Setter Property="VerticalContentAlignment" Value="{Binding Path=VerticalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" />
+        <Setter Property="HorizontalContentAlignment" Value="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" />
+        <Setter Property="VerticalContentAlignment" Value="{Binding VerticalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" />
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.MenuTextBrushKey}}" />
         <Setter Property="Template">
@@ -1074,7 +1087,7 @@
                             <Popup x:Name="SubMenuPopup"
                                    AllowsTransparency="true"
                                    Focusable="false"
-                                   IsOpen="{Binding Path=IsSubmenuOpen,
+                                   IsOpen="{Binding IsSubmenuOpen,
                                                     RelativeSource={RelativeSource TemplatedParent}}"
                                    Placement="Right"
                                    PopupAnimation="{DynamicResource {x:Static SystemParameters.MenuPopupAnimationKey}}"
@@ -1456,8 +1469,8 @@
            TargetType="{x:Type TreeViewItem}"
            d:IsControlPart="True">
         <Setter Property="Background" Value="Transparent" />
-        <Setter Property="HorizontalContentAlignment" Value="{Binding Path=HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" />
-        <Setter Property="VerticalContentAlignment" Value="{Binding Path=VerticalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" />
+        <Setter Property="HorizontalContentAlignment" Value="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" />
+        <Setter Property="VerticalContentAlignment" Value="{Binding VerticalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" />
         <Setter Property="Padding" Value="1,0,0,0" />
         <Setter Property="Template">
             <Setter.Value>
@@ -1474,7 +1487,7 @@
                         </Grid.RowDefinitions>
                         <ToggleButton x:Name="Expander"
                                       ClickMode="Press"
-                                      IsChecked="{Binding Path=IsExpanded,
+                                      IsChecked="{Binding IsExpanded,
                                                           RelativeSource={RelativeSource TemplatedParent}}"
                                       Style="{DynamicResource SimpleTreeViewItemToggleButton}" />
                         <Border x:Name="Selection_Border"
@@ -1519,4 +1532,10 @@
             </Setter.Value>
         </Setter>
     </Style>
+    <SolidColorBrush x:Key="HeaderColour" Color="#FF24B3F9" />
+    <SolidColorBrush x:Key="MainBackgroundColour" Color="#FF242B33" />
+    <SolidColorBrush x:Key="HeaderFontColour" Color="White" />
+    <System:Double x:Key="LargeFontSize">32</System:Double>
+    <ControlTemplate x:Key="MenuModuleButton" TargetType="{x:Type Button}" />
+    <SolidColorBrush x:Key="MainMenuModuleBrush" Color="#FFA2A2A2" />
 </ResourceDictionary>
