--- a/Prover.Instruments.Search/Views/InstrumentListAndDetails.xaml
+++ b/Prover.Instruments.Search/Views/InstrumentListAndDetails.xaml
@@ -1,11 +1,19 @@
 ﻿<UserControl x:Class="InstrumentListAndDetails"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:local="clr-namespace:Prover.Instruments.View"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             d:DesignHeight="300"
+             d:DesignWidth="300"
+             mc:Ignorable="d">
     <Grid>
-        <ContentControl Content="Ins" />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <local:InstrumentsListPage Grid.Column="0" />
+        <local:InstrumentDetails Grid.Column="1" />
+
     </Grid>
 </UserControl>
