--- a/Prover.Instruments.Search/Views/MainMenu.xaml
+++ b/Prover.Instruments.Search/Views/MainMenu.xaml
@@ -56,9 +56,7 @@
                 </TextBlock>
 
 
-                <Button Background="#FF200074"
-                        BorderBrush="#FF200074"
-                        Command="{Binding StartNewTestCommand}">
+                <Button Command="{Binding StartNewTestCommand}">
                     <Button.OpacityMask>
                         <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
                             <GradientStop Offset="0" Color="Black" />
@@ -121,12 +119,21 @@
                         </TransformGroup>
                     </TextBlock.RenderTransform>
                 </TextBlock>
-                <Button Command="{Binding }">
-                    <Image Grid.Row="0"
-                           Grid.Column="1"
-                           Width="75"
-                           Height="75"
-                           Source="/Prover.Instruments.View;component/Themes/Icons/search.png" />
+                <Button Command="{Binding StartViewInstrumentsCommand}">
+                    <Button.OpacityMask>
+                        <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                            <GradientStop Offset="0" Color="Black" />
+                            <GradientStop Offset="1" Color="White" />
+                        </LinearGradientBrush>
+                    </Button.OpacityMask>
+                    <Button.Content>
+                        <Image Grid.Row="0"
+                               Grid.Column="1"
+                               Width="75"
+                               Height="75"
+                               Source="/Prover.Instruments.View;component/Themes/Icons/search.png" />
+                    </Button.Content>
+
                 </Button>
 
             </Grid>
