--- a/Prover.Client/Windows/MainWindow.xaml
+++ b/Prover.Client/Windows/MainWindow.xaml
@@ -10,11 +10,16 @@
         mc:Ignorable="d">
 
     <Window.Resources />
-    <DockPanel>
-        <Grid Height="50"
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1.25*" />
+            <RowDefinition Height="7*" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0"
+              Height="50"
               Margin="0,10"
-              Background="{DynamicResource HeaderColour}"
-              DockPanel.Dock="Top">
+              Background="{DynamicResource HeaderColour}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition />
@@ -90,10 +95,17 @@
             </Grid>
             <!--  <ContentControl prism:RegionManager.RegionName="{x:Static regions:RegionNames.ContentRegion}" />  -->
         </Grid>
-        <Grid DockPanel.Dock="Bottom">
-            <!--  <ContentControl prism:RegionManager.RegionName="{x:Static regions:RegionNames.NavigationRegion}" />  -->
-            <ContentControl Margin="10,10,0,0" prism:RegionManager.RegionName="{x:Static regions:RegionNames.MainRegion}" />
+        <Grid Grid.Row="1">
+            <ContentControl Margin="0" prism:RegionManager.RegionName="{x:Static regions:RegionNames.MainRegion}" />
+        </Grid>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="2*" />
+            </Grid.ColumnDefinitions>
+            <ContentControl Grid.Column="0" prism:RegionManager.RegionName="{x:Static regions:RegionNames.ListRegion}" />
+            <ContentControl Grid.Column="1" prism:RegionManager.RegionName="{x:Static regions:RegionNames.DetailsRegion}" />
         </Grid>
         <!--  <ContentControl prism:RegionManager.RegionName="{x:Static regions:RegionNames.ContentRegion}" />  -->
-    </DockPanel>
+    </Grid>
 </Window>
