* Implemented EC300 and the IrDA communications
* More UI fixes
* Async calls for communications with the instrument

--- a/Prover.Client/Application.xaml
+++ b/Prover.Client/Application.xaml
@@ -6,6 +6,8 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Themes\SimpleStyles.xaml" />
+                <ResourceDictionary Source="/Prover.Instruments.View;component/RadioButtonStyle.xaml"/>
+                <ResourceDictionary Source="Themes/RadioButtonStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
 
