--- a/Prover.Client/Windows/MainWindow.xaml
+++ b/Prover.Client/Windows/MainWindow.xaml
@@ -106,6 +106,14 @@
             <ContentControl Grid.Column="0" prism:RegionManager.RegionName="{x:Static regions:RegionNames.ListRegion}" />
             <ContentControl Grid.Column="1" prism:RegionManager.RegionName="{x:Static regions:RegionNames.DetailsRegion}" />
         </Grid>
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+
+            <ContentControl Grid.Column="1" prism:RegionManager.RegionName="{x:Static regions:RegionNames.NotificationRegion}" />
+        </Grid>
         <!--  <ContentControl prism:RegionManager.RegionName="{x:Static regions:RegionNames.ContentRegion}" />  -->
     </Grid>
 </Window>
